--- a/public/styles.css
+++ b/public/styles.css
@@ -75,7 +75,7 @@ transition: all 0.4s ease;
     content: "";
     background: #25717e;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: absolute;
     left: 0;
     top: 0;
